# Web3-Terminal

./: Cargo.toml
arbitrage/: Cargo.toml
arbitrage/src/: main.rs
collector/: Cargo.toml  config.yaml
collector/src/: config.rs  exchange.rs  main.rs
collector/src/exchanges/: binance.rs  bybit.rs  coinbase.rs  hyperliquid.rs  kraken.rs  mod.rs
