[package]
name = "arbitrage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Async + Concurrency
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
dashmap = "5"

# Redis (async)
redis = { version = "0.24", features = ["tokio-comp"] }

# Optional SIMD JSON (faster parsing, disabled by default)
simd-json = { version = "0.4", optional = true }

# For CPU count (if you want to set worker count dynamically)
num_cpus = "1"

[features]
# Enable this when you want to use the fast SIMD parsing path
fast-simd = ["simd-json"]

# Default features (safe baseline)
default = []
